fix(header): fix header z-index

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,6 +3,7 @@
   position: relative;
   width: 100%;
   background-color: white;
+  z-index: 1;
 
   &__content {
     padding: $padding-mobile;
